UPDATE: ajustes para el inicio del desarrollo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="saludalosojosApp" ng-controller="mainController">
+<html lang="en" ng-app="piluchoApp" ng-controller="mainController">
   <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
-    <title>Quick Survey</title>
+    <title>Campanario</title>
 
     <!-- Bootstrap for Angular -->
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -59,8 +59,8 @@
   <!-- / Bootstrap for AngularJS -->
 
   <!-- Angulartics + Google Analytics -->
-  <script src="lib/angulartics/dist/angulartics.min.js"></script>
-  <script src="lib/angulartics/dist/angulartics-ga.min.js"></script>
+  <!-- <script src="lib/angulartics/dist/angulartics.min.js"></script>
+  <script src="lib/angulartics/dist/angulartics-ga.min.js"></script> -->
   <!-- / Angulartics + Google Analytics -->
 
   <!-- ngProgress -->
