--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,17 @@
 <html lang="en" ng-app="piluchoApp" ng-controller="mainController">
   <head>
 
+    <base href="/">
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
     <title>Campanario</title>
+
+    <!-- Fonts -->
+    <link href="fonts/stylesheet.css" rel="stylesheet">
+    <!-- / Fonts -->
 
     <!-- Bootstrap for Angular -->
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -38,6 +44,7 @@
     <!-- <div ng-include="'app/controllers/menu/template.html'" id="container-menu"></div> -->
 
     <div id="content">
+      <ng-include src="'app/modules/menu/menu.template.html'" ng-controller="menuController" id="main-menu" ng-class="{scroll: toppage}"></ng-include>
       <div ng-view></div>
     </div>
 
@@ -74,7 +81,8 @@
     <script src="app/run.js"></script>
 
     <!-- Modules -->
-    <script src="app/modules/home/homeController.js"></script>
+    <script src="app/modules/menu/menu.controller.js"></script>
+    <script src="app/modules/home/home.controller.js"></script>
     <!-- <script src="app/modules/example/exampleController.js"></script> -->
     <!-- / Modules -->
 
