UPDATE: Diseño vista home (conectar)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,6 +59,7 @@
   <!-- AngularJS -->
   <script src="lib/angular/angular.min.js"></script>
   <script src="lib/angular-route/angular-route.min.js"></script>
+  <script src="lib/ng-backstretch/src/ng-backstretch.js"></script>
   <!-- / AngularJS -->
 
   <!-- Bootstrap for AngularJS -->
@@ -82,6 +83,7 @@
 
     <!-- Modules -->
     <script src="app/modules/menu/menu.controller.js"></script>
+    <script src="app/modules/root/root.controller.js"></script>
     <script src="app/modules/home/home.controller.js"></script>
     <!-- <script src="app/modules/example/exampleController.js"></script> -->
     <!-- / Modules -->
