--- a/frontend/app/modules/root/main.template.html
+++ b/frontend/app/modules/root/main.template.html
@@ -1,1 +1,3 @@
 <ng-include src="'app/modules/home/home.template.html'" ng-controller="homeController" id="home" backstretch backstretch-images="'/img/home/bg.png'"></ng-include>
+
+<ng-include src="'app/modules/galeria/galeria.template.html'" class="text-center" id="galeria"></ng-include>
