UPDATE: Vistas ganadores Kit y footer

--- a/frontend/app/modules/menu/menu.template.html
+++ b/frontend/app/modules/menu/menu.template.html
@@ -23,9 +23,9 @@
 			</a>
 		</li>
 		<li class="redes">
-			<a href="/"><img src="img/redes/facebook.png"></a>
-			<a href="/"><img src="img/redes/twitter.png"></a>
-			<a href="/"><img src="img/redes/youtube.png"></a>
+			<a href="/" target="_blank"><img src="img/redes/facebook.png"></a>
+			<a href="/" target="_blank"><img src="img/redes/twitter.png"></a>
+			<a href="/" target="_blank"><img src="img/redes/youtube.png"></a>
 		</li>
 	</ul>
 </div>
