--- a/frontend/app/modules/root/main.template.html
+++ b/frontend/app/modules/root/main.template.html
@@ -4,4 +4,8 @@
 
 <ng-include src="'app/modules/root/premios.template.html'" class="text-center" id="premios"></ng-include>
 
-<ng-include src="'app/modules/ganadores/ganadores.template.html'" class="text-center" id="ganadores"></ng-include>
+<ng-include src="'app/modules/ganadores/ganadores.template.html'" ng-controller="ganadoresController" class="text-center" id="ganadores"></ng-include>
+
+<ng-include src="'app/modules/root/kit.template.html'" class="text-center" id="kit"></ng-include>
+
+<ng-include src="'app/modules/root/footer.template.html'" class="text-left" id="footer"></ng-include>
