--- a/frontend/index.html
+++ b/frontend/index.html
@@ -85,6 +85,7 @@
     <script src="app/modules/menu/menu.controller.js"></script>
     <script src="app/modules/root/root.controller.js"></script>
     <script src="app/modules/home/home.controller.js"></script>
+    <script src="app/modules/ganadores/ganadores.controller.js"></script>
     <!-- <script src="app/modules/example/exampleController.js"></script> -->
     <!-- / Modules -->
 
