--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,6 +66,10 @@
   <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <!-- / Bootstrap for AngularJS -->
 
+  <!-- angular-easyfb for AngularJS -->
+  <script src="lib/angular-easyfb/build/angular-easyfb.min.js"></script>
+  <!-- / angular-easyfb for AngularJS -->
+
   <!-- Angulartics + Google Analytics -->
   <!-- <script src="lib/angulartics/dist/angulartics.min.js"></script>
   <script src="lib/angulartics/dist/angulartics-ga.min.js"></script> -->
@@ -92,6 +96,10 @@
     <!-- Directives -->
     <!-- <script src="app/directives/example.directive.js"></script> -->
     <!-- / Directives -->
+
+    <!-- Factories -->
+    <script src="app/factory/user.js"></script>
+    <!-- / Factories -->
 
   <!-- / Application -->
 
