UPDATE: algunas correcciones de texto y diseño

--- a/frontend/app/modules/menu/menu.template.html
+++ b/frontend/app/modules/menu/menu.template.html
@@ -30,7 +30,7 @@
 					<div class="menu">
 						<ul>
 							<li>
-								<a href="#" ng-click="logout();">Logout</a>
+								<a href="#" ng-click="logout();">Cerrar Sesión</a>
 							</li>
 						</ul>
 					</div>
