UPDATE: Funcionalidad para grabar audio y guardar en tabla (WIP) (solo desktop)

--- a/frontend/app/modules/home/home.template.html
+++ b/frontend/app/modules/home/home.template.html
@@ -12,7 +12,7 @@
 						<p>Para participar tienes que iniciar sesión</p>
 					</div>
 					<div class="game" ng-show="userLogin">
-						<button class="button red" ng-click="jugar();">GRABAR ARENGA</button>
+						<button class="button red" ng-click="grabar();">GRABAR ARENGA</button>
 						<button href="#premios" ng-click="goTo($event)" class="button">VER PREMIOS</button>
 					</div>
 				</div>
