--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,6 +70,12 @@
   <script src="lib/angular-easyfb/build/angular-easyfb.min.js"></script>
   <!-- / angular-easyfb for AngularJS -->
 
+  <!-- MediaStreamRecorder & howler -->
+  <script src="lib/msr/MediaStreamRecorder.min.js"></script>
+  <script src="lib/howler/howler.min.js"></script>
+  <script src="lib/howler/howler.effects.min.js"></script>
+  <!-- / MediaStreamRecorder & howler -->
+
   <!-- Angulartics + Google Analytics -->
   <!-- <script src="lib/angulartics/dist/angulartics.min.js"></script>
   <script src="lib/angulartics/dist/angulartics-ga.min.js"></script> -->
@@ -90,6 +96,7 @@
     <script src="app/modules/root/root.controller.js"></script>
     <script src="app/modules/home/home.controller.js"></script>
     <script src="app/modules/ganadores/ganadores.controller.js"></script>
+    <script src="app/modules/record/desktop.controller.js"></script>
     <!-- <script src="app/modules/example/exampleController.js"></script> -->
     <!-- / Modules -->
 
