UPDATE: Funcionalidad Galería

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,6 +97,7 @@
     <script src="app/modules/home/home.controller.js"></script>
     <script src="app/modules/ganadores/ganadores.controller.js"></script>
     <script src="app/modules/record/desktop.controller.js"></script>
+    <script src="app/modules/galeria/galeria.controller.js"></script>
     <!-- <script src="app/modules/example/exampleController.js"></script> -->
     <!-- / Modules -->
 
