--- a/frontend/app/modules/galeria/galeria.template.html
+++ b/frontend/app/modules/galeria/galeria.template.html
@@ -2,152 +2,17 @@
 
 <div class="container">
 	<div class="list">
-		<div class="row">
-			<div class="col-md-3">
+		<div class="row" ng-repeat="(mainindex, records) in listGallery">
+			<div class="col-md-3" ng-repeat="(recordindex, record) in records">
 				<div class="block">
 					<div class="user text-left">
-						<img src="img/galeria/user.png">
-						<span class="name">Leonardo Olivares Montoya</span>
+						<img ng-src="//graph.facebook.com/{{record.fb_id}}/picture?type=square">
+						<span class="name">{{record.name}}</span>
 					</div>
 					<div class="player">
 						<div class="content">
 							<img src="img/galeria/player.png" class="fake">
-							<img src="img/galeria/play.png" class="play">
-						</div>
-					</div>
-					<div class="share">
-						<a href="/"><img src="img/galeria/facebook.png"></a>
-						<a href="/"><img src="img/galeria/twitter.png"></a>
-						<a href="/"><img src="img/galeria/link.png"></a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="block">
-					<div class="user text-left">
-						<img src="img/galeria/user.png">
-						<span class="name">Leonardo Olivares Montoya</span>
-					</div>
-					<div class="player">
-						<div class="content">
-							<img src="img/galeria/player.png" class="fake">
-							<img src="img/galeria/play.png" class="play">
-						</div>
-					</div>
-					<div class="share">
-						<a href="/"><img src="img/galeria/facebook.png"></a>
-						<a href="/"><img src="img/galeria/twitter.png"></a>
-						<a href="/"><img src="img/galeria/link.png"></a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="block">
-					<div class="user text-left">
-						<img src="img/galeria/user.png">
-						<span class="name">Leonardo Olivares Montoya</span>
-					</div>
-					<div class="player">
-						<div class="content">
-							<img src="img/galeria/player.png" class="fake">
-							<img src="img/galeria/play.png" class="play">
-						</div>
-					</div>
-					<div class="share">
-						<a href="/"><img src="img/galeria/facebook.png"></a>
-						<a href="/"><img src="img/galeria/twitter.png"></a>
-						<a href="/"><img src="img/galeria/link.png"></a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="block">
-					<div class="user text-left">
-						<img src="img/galeria/user.png">
-						<span class="name">Leonardo Olivares Montoya</span>
-					</div>
-					<div class="player">
-						<div class="content">
-							<img src="img/galeria/player.png" class="fake">
-							<img src="img/galeria/play.png" class="play">
-						</div>
-					</div>
-					<div class="share">
-						<a href="/"><img src="img/galeria/facebook.png"></a>
-						<a href="/"><img src="img/galeria/twitter.png"></a>
-						<a href="/"><img src="img/galeria/link.png"></a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-3">
-				<div class="block">
-					<div class="user text-left">
-						<img src="img/galeria/user.png">
-						<span class="name">Leonardo Olivares Montoya</span>
-					</div>
-					<div class="player">
-						<div class="content">
-							<img src="img/galeria/player.png" class="fake">
-							<img src="img/galeria/play.png" class="play">
-						</div>
-					</div>
-					<div class="share">
-						<a href="/"><img src="img/galeria/facebook.png"></a>
-						<a href="/"><img src="img/galeria/twitter.png"></a>
-						<a href="/"><img src="img/galeria/link.png"></a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="block">
-					<div class="user text-left">
-						<img src="img/galeria/user.png">
-						<span class="name">Leonardo Olivares Montoya</span>
-					</div>
-					<div class="player">
-						<div class="content">
-							<img src="img/galeria/player.png" class="fake">
-							<img src="img/galeria/play.png" class="play">
-						</div>
-					</div>
-					<div class="share">
-						<a href="/"><img src="img/galeria/facebook.png"></a>
-						<a href="/"><img src="img/galeria/twitter.png"></a>
-						<a href="/"><img src="img/galeria/link.png"></a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="block">
-					<div class="user text-left">
-						<img src="img/galeria/user.png">
-						<span class="name">Leonardo Olivares Montoya</span>
-					</div>
-					<div class="player">
-						<div class="content">
-							<img src="img/galeria/player.png" class="fake">
-							<img src="img/galeria/play.png" class="play">
-						</div>
-					</div>
-					<div class="share">
-						<a href="/"><img src="img/galeria/facebook.png"></a>
-						<a href="/"><img src="img/galeria/twitter.png"></a>
-						<a href="/"><img src="img/galeria/link.png"></a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="block">
-					<div class="user text-left">
-						<img src="img/galeria/user.png">
-						<span class="name">Leonardo Olivares Montoya</span>
-					</div>
-					<div class="player">
-						<div class="content">
-							<img src="img/galeria/player.png" class="fake">
-							<img src="img/galeria/play.png" class="play">
+							<img src="img/galeria/play.png" class="play" ng-click="playRecord($event, mainindex, recordindex);">
 						</div>
 					</div>
 					<div class="share">
@@ -162,7 +27,7 @@
 
 	<div class="row">
 		<div class="col-sm-12">
-			<button class="button ver-mas"><img src="img/galeria/mas.png"></button>
+			<button class="button ver-mas" ng-click="getMore()" ng-show="showMore"><img src="img/galeria/mas.png"></button>
 		</div>
 	</div>
 	
