--- a/frontend/app/modules/root/main.template.html
+++ b/frontend/app/modules/root/main.template.html
@@ -2,7 +2,7 @@
 
 <ng-include src="'app/modules/home/home.template.html'" ng-controller="homeController" id="home" backstretch backstretch-images="'/img/home/bg.png'"></ng-include>
 
-<ng-include src="'app/modules/galeria/galeria.template.html'" class="text-center" id="galeria"></ng-include>
+<ng-include src="'app/modules/galeria/galeria.template.html'" ng-controller="galeriaController" class="text-center" id="galeria"></ng-include>
 
 <ng-include src="'app/modules/root/premios.template.html'" class="text-center" id="premios"></ng-include>
 
