--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,7 +82,7 @@
   <!-- / Angulartics + Google Analytics -->
 
   <!-- ngProgress -->
-  <script src="lib/ngprogress/build/ngProgress.min.js"></script>
+  <!-- <script src="lib/ngprogress/build/ngProgress.min.js"></script> -->
   <!-- / ngProgress -->
 
   <!-- Application -->
