UPDATE: ajustes del home para movil

--- a/frontend/app/modules/menu/menu.template.html
+++ b/frontend/app/modules/menu/menu.template.html
@@ -1,5 +1,5 @@
 <img src="/img/menu/logo.png">
-<div class="pull-right">
+<div class="pull-right hidden-xs">
 	<ul>
 		<li>
 			<a href="#home" ng-click="goTo($event)" ng-class="{ active: isActive('#home')}">Home</a>
