--- a/frontend/app/modules/root/main.template.html
+++ b/frontend/app/modules/root/main.template.html
@@ -6,7 +6,7 @@
 
 <ng-include src="'app/modules/root/premios.template.html'" class="text-center" id="premios"></ng-include>
 
-<ng-include src="'app/modules/ganadores/ganadores.template.html'" ng-controller="ganadoresController" class="text-center" id="ganadores"></ng-include>
+<ng-include src="'app/modules/ganadores/ganadores.template.html'" ng-controller="ganadoresController" class="text-center hidden-xs" id="ganadores"></ng-include>
 
 <ng-include src="'app/modules/root/kit.template.html'" class="text-center" ng-style="{'background-position-y': windowPosY*1.5}" id="kit"></ng-include>
 
