--- a/frontend/app/modules/home/home.template.html
+++ b/frontend/app/modules/home/home.template.html
@@ -18,7 +18,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-6 text-left">
+		<div class="col-md-6 text-left hidden-xs">
 			<img src="img/home/pilucho.png">
 		</div>
 	</div>
