UPDATE: Se verifica versión de iOS para evitar error al obtener objeto de audio

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,6 +76,11 @@
   <script src="lib/howler/howler.effects.min.js"></script>
   <!-- / MediaStreamRecorder & howler -->
 
+  <!-- ng-device-detector -->
+  <script src="lib/ng-device-detector/ng-device-detector.min.js"></script>
+  <script src="lib/re-tree/re-tree.min.js"></script>
+  <!-- / ng-device-detector -->
+
   <!-- Angulartics + Google Analytics -->
   <!-- <script src="lib/angulartics/dist/angulartics.min.js"></script>
   <script src="lib/angulartics/dist/angulartics-ga.min.js"></script> -->
