UPDATE: Se utiliza nueva librería para galería, ya que con esta se puede realizar efecto de movimiento en la boca

--- a/frontend/app/modules/galeria/galeria.template.html
+++ b/frontend/app/modules/galeria/galeria.template.html
@@ -12,6 +12,7 @@
 					<div class="player">
 						<div class="content">
 							<img src="img/galeria/player.png" class="fake">
+							<div class="boca"></div>
 							<img src="img/galeria/play.png" class="play" ng-click="playRecord($event, mainindex, recordindex);">
 						</div>
 					</div>
