--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,6 +76,10 @@
   <script src="lib/howler/howler.effects.min.js"></script>
   <!-- / MediaStreamRecorder & howler -->
 
+  <!-- Dancer.js -->
+  <script src="lib/lialosiu-dancer/dancer.min.js"></script>
+  <!-- / Dancer.js -->
+
   <!-- ng-device-detector -->
   <script src="lib/ng-device-detector/ng-device-detector.min.js"></script>
   <script src="lib/re-tree/re-tree.min.js"></script>
