UPDATE: Se agrega nuevo player para vista de grabación (solo desktop)

--- a/frontend/app/modules/record/desktop.template.html
+++ b/frontend/app/modules/record/desktop.template.html
@@ -11,6 +11,7 @@
 							<div class="movil-text" ng-show="!onData">
 								Graba tu audio alentando a Chile (15 segundos max.) y participa por increíbles premios.
 							</div>
+							<div class="boca"></div>
 							<img src="img/record/desktop/btn-play.png" ng-show="!onPlay && onData && !onRecord" ng-Click="play()" class="play">
 						</div>
 					</div>
