UPDATE: Diseño de ganadores para movil

--- a/frontend/app/modules/ganadores/ganadores.template.html
+++ b/frontend/app/modules/ganadores/ganadores.template.html
@@ -1,6 +1,8 @@
 <img src="img/ganadores/title.png">
 
-<div class="packs">
+<img src="img/ganadores/movil/title.png" class="title-semanal">
+
+<!-- <div class="packs">
 	<div class="content">
 		<div class="list" ng-init="setStyle()">
 			<ul ng-style="{width:elementWidth * sorteos.length, 'margin-left': elementWidth * indexList * -1}">
@@ -18,6 +20,12 @@
 			</div>
 		</div>
 	</div>
+</div> -->
+
+<div class="packs no-winners">
+	<p>
+		El viernes X de Junio se eligirá el primer ganador de uno de los Pack del Hincha
+	</p>
 </div>
 
 <div class="super">
