UPDATE: Correcciones de diseño para movil

--- a/frontend/app/modules/record/desktop.template.html
+++ b/frontend/app/modules/record/desktop.template.html
@@ -19,7 +19,7 @@
 						{{timePlayback}}
 					</div>
 				</div>
-				<div class="col-sm-5 movil-ajust">
+				<div class="col-sm-5 movil-ajust cont">
 					<p class="hidden-xs">
 						Graba tu audio alentando a Chile (15 segundos max.) y participa por increíbles premios.
 					</p>
