UPDATE: Correcciones de diseño

--- a/frontend/app/modules/home/home.template.html
+++ b/frontend/app/modules/home/home.template.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row">
-		<div class="col-md-6 text-right conectar">
+		<div class="col-sm-6 text-right conectar">
 			<div class="text-center">
 				<img src="img/home/llamado.png" class="title">
 				<div class="loader" ng-show="loader">
@@ -18,7 +18,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-6 text-left hidden-xs">
+		<div class="col-sm-6 text-left hidden-xs">
 			<img src="img/home/pilucho.png">
 		</div>
 	</div>
