--- a/frontend/app/modules/galeria/galeria.template.html
+++ b/frontend/app/modules/galeria/galeria.template.html
@@ -3,7 +3,7 @@
 <div class="container">
 	<div class="list">
 		<div class="row" ng-repeat="(mainindex, records) in listGallery">
-			<div class="col-md-3" ng-repeat="(recordindex, record) in records">
+			<div class="col-sm-3" ng-repeat="(recordindex, record) in records">
 				<div class="block">
 					<div class="user text-left">
 						<img ng-src="//graph.facebook.com/{{record.fb_id}}/picture?type=square">
