--- a/frontend/app/modules/root/kit.template.html
+++ b/frontend/app/modules/root/kit.template.html
@@ -8,13 +8,13 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-sm-4">
 			<img src="img/kit/item1.png">
 		</div>
-		<div class="col-md-4">
+		<div class="col-sm-4">
 			<img src="img/kit/item2.png">
 		</div>
-		<div class="col-md-4">
+		<div class="col-sm-4">
 			<img src="img/kit/item3.png">
 		</div>
 	</div>
