--- a/frontend/app/modules/root/premios.template.html
+++ b/frontend/app/modules/root/premios.template.html
@@ -2,13 +2,13 @@
 
 <div class="container text-center">
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-sm-6">
 			<img src="img/premios/premio1.png">
 			<p>
 				Un (1) super premio compuesto por un Televisor Smart TV, un Frigobar y 12 botellas de Pisco Campanario de 700cc.
 			</p>
 		</div>
-		<div class="col-md-6">
+		<div class="col-sm-6">
 			<img src="img/premios/premio2.png">
 			<p>
 				Tres (3) Pack del Hincha, compuesto por dos Kit del Hincha + 2 Bebidas Cola de 1.5 litros.
