UPDATE: Se agrega url de redes sociales

--- a/frontend/app/modules/menu/menu.template.html
+++ b/frontend/app/modules/menu/menu.template.html
@@ -39,9 +39,9 @@
 			</div>
 		</li>
 		<li class="redes">
-			<a href="/" target="_blank"><img src="img/redes/facebook.png"></a>
-			<a href="/" target="_blank"><img src="img/redes/twitter.png"></a>
-			<a href="/" target="_blank"><img src="img/redes/youtube.png"></a>
+			<a href="https://www.facebook.com/piscocampanario/" target="_blank"><img src="img/redes/facebook.png"></a>
+			<a href="https://twitter.com/CampanarioChile" target="_blank"><img src="img/redes/twitter.png"></a>
+			<a href="https://www.youtube.com/user/CampanarioReposado" target="_blank"><img src="img/redes/youtube.png"></a>
 		</li>
 	</ul>
 </div>
@@ -99,8 +99,8 @@
 		</div>
 	</div>
 	<div class="redes text-center">
-		<a href="/"><img src="img/menu/movil/facebook.png"></a>
-		<a href="/"><img src="img/menu/movil/twitter.png"></a>
-		<a href="/"><img src="img/menu/movil/youtube.png"></a>
+		<a href="https://www.facebook.com/piscocampanario/" target="_blank"><img src="img/menu/movil/facebook.png"></a>
+		<a href="https://twitter.com/CampanarioChile" target="_blank"><img src="img/menu/movil/twitter.png"></a>
+		<a href="https://www.youtube.com/user/CampanarioReposado" target="_blank"><img src="img/menu/movil/youtube.png"></a>
 	</div>
 </div>
