UPDATE: Funcionalidad para compartir en Facebook y Twitter

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,6 +108,7 @@
 
     <!-- Factories -->
     <script src="app/factory/user.js"></script>
+    <script src="app/factory/compartir.js"></script>
     <!-- / Factories -->
 
   <!-- / Application -->
