--- a/frontend/app/modules/galeria/galeria.template.html
+++ b/frontend/app/modules/galeria/galeria.template.html
@@ -17,9 +17,9 @@
 						</div>
 					</div>
 					<div class="share">
-						<a href="/"><img src="img/galeria/facebook.png"></a>
-						<a href="/"><img src="img/galeria/twitter.png"></a>
-						<a href="/"><img src="img/galeria/link.png"></a>
+						<a href="#" ng-click="shareFB();"><img src="img/galeria/facebook.png"></a>
+						<a href="#" ng-click="shareTW();"><img src="img/galeria/twitter.png"></a>
+						<a href="#" ng-click="shareFB();"><img src="img/galeria/link.png"></a>
 					</div>
 				</div>
 			</div>
