--- a/frontend/app/modules/record/desktop.template.html
+++ b/frontend/app/modules/record/desktop.template.html
@@ -56,9 +56,9 @@
 
 			<div class="share">
 				<span>Comparte con tus amigos</span>
-				<a href="/" target="_blank"><img src="img/record/final/facebook.png"></a>
-				<a href="/" target="_blank"><img src="img/record/final/twitter.png"></a>
-				<a href="/" target="_blank"><img src="img/record/final/link.png"></a>
+				<a href="/" ng-click="shareFB();"><img src="img/record/final/facebook.png"></a>
+				<a href="/" ng-click="shareTW();"><img src="img/record/final/twitter.png"></a>
+				<a href="/" ng-click="shareFB();"><img src="img/record/final/link.png"></a>
 			</div>
 		</div>
 	</div>
