UPDATE: Se agrega info de Open Graph

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
-    <title>Campanario</title>
+    <title>Campanario - El Pilucho</title>
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Campanario - El Pilucho" />
+    <meta property="og:description" content="Alienta a Chile junto al Pilucho y participa por increíbles premios." />
+    <meta property="og:image" content="/img/share.png" />
+    <!-- / Open Graph -->
 
     <!-- Fonts -->
     <link href="fonts/stylesheet.css" rel="stylesheet">
