--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Campanario - El Pilucho" />
     <meta property="og:description" content="Alienta a Chile junto al Pilucho y participa por increíbles premios." />
-    <meta property="og:image" content="/img/share.png" />
+    <meta property="og:image" content="https://pilucho.campanario.cl/img/share.png" />
     <!-- / Open Graph -->
 
     <!-- Fonts -->
