UPDATE: Se agrega funcionalidad de clipboard

--- a/frontend/app/modules/galeria/galeria.template.html
+++ b/frontend/app/modules/galeria/galeria.template.html
@@ -19,7 +19,7 @@
 					<div class="share">
 						<a href="#" ng-click="shareFB();"><img src="img/galeria/facebook.png"></a>
 						<a href="#" ng-click="shareTW();"><img src="img/galeria/twitter.png"></a>
-						<a href="#" ng-click="shareFB();"><img src="img/galeria/link.png"></a>
+						<a href="#" clipboard text="absUrl"><img src="img/galeria/link.png"></a>
 					</div>
 				</div>
 			</div>
