--- a/frontend/app/modules/record/desktop.template.html
+++ b/frontend/app/modules/record/desktop.template.html
@@ -58,7 +58,7 @@
 				<span>Comparte con tus amigos</span>
 				<a href="/" ng-click="shareFB();"><img src="img/record/final/facebook.png"></a>
 				<a href="/" ng-click="shareTW();"><img src="img/record/final/twitter.png"></a>
-				<a href="/" ng-click="shareFB();"><img src="img/record/final/link.png"></a>
+				<a href="/" clipboard text="absUrl"><img src="img/record/final/link.png"></a>
 			</div>
 		</div>
 	</div>
