--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,6 +58,7 @@
   <script src="lib/angular/angular.min.js"></script>
   <script src="lib/angular-route/angular-route.min.js"></script>
   <script src="lib/ng-backstretch/src/ng-backstretch.js"></script>
+  <script src="lib/angular-clipboard/angular-clipboard.js"></script>
   <!-- / AngularJS -->
 
   <!-- Bootstrap for AngularJS -->
