--- a/frontend/app/modules/root/agegate.template.html
+++ b/frontend/app/modules/root/agegate.template.html
@@ -1,7 +1,8 @@
+<img src="/img/menu/logo.png" class="logo">
 <div class="container">
 	<div class="content">
 		<div class="row">
-			<div class="col-sm-12 text-right conectar">
+			<div class="col-sm-12 col-md-8 text-right conectar">
 				<div class="text-center">
 					<img src="img/home/llamado.png" class="title">
 					<div class="views">
