--- a/frontend/app/modules/root/main.template.html
+++ b/frontend/app/modules/root/main.template.html
@@ -1,4 +1,4 @@
-<ng-include src="'app/modules/root/agegate.template.html'" class="text-center" id="agegate" backstretch backstretch-images="'/img/home/bg.png'" ng-show="getAgeGate()"></ng-include>
+<ng-include src="'app/modules/root/agegate.template.html'" class="text-center" id="agegate" backstretch backstretch-images="'/img/agegate/bg.jpg'" ng-show="getAgeGate()"></ng-include>
 
 <ng-include src="'app/modules/record/desktop.template.html'" ng-controller="recordDektopController" class="text-center" id="record" ng-show="userRecord"></ng-include>
 
