UPDATE: Corrección de diseño agegate para movil

--- a/frontend/app/modules/root/main.template.html
+++ b/frontend/app/modules/root/main.template.html
@@ -2,7 +2,7 @@
 
 <ng-include src="'app/modules/record/desktop.template.html'" ng-controller="recordDektopController" class="text-center" id="record" ng-show="userRecord"></ng-include>
 
-<ng-include src="'app/modules/home/home.template.html'" ng-controller="homeController" id="home" backstretch backstretch-images="'/img/home/bg.png'"></ng-include>
+<ng-include src="'app/modules/home/home.template.html'" ng-controller="homeController" id="home" backstretch backstretch-images="'/img/home/bg.jpg'"></ng-include>
 
 <ng-include src="'app/modules/galeria/galeria.template.html'" ng-controller="galeriaController" class="text-center" id="galeria"></ng-include>
 
