UPDATE: Cambio en configuración de Open Graph

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,12 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
-    <title>Campanario - El Pilucho</title>
+    <title>El Pilucho con Campanario</title>
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Campanario - El Pilucho" />
-    <meta property="og:description" content="Alienta a Chile junto al Pilucho y participa por increíbles premios." />
-    <meta property="og:image" content="https://pilucho.campanario.cl/img/share.png" />
+    <meta property="og:title" content="El Pilucho con Campanario" />
+    <meta property="og:description" content="Ingresa ahora, dale un grito de apoyo a Chile y participa por fabulosos premios" />
+    <meta property="og:image" content="https://pilucho.campanario.cl/img/share.jpg" />
     <!-- / Open Graph -->
 
     <!-- Fonts -->
