--- a/frontend/app/modules/galeria/galeria.template.html
+++ b/frontend/app/modules/galeria/galeria.template.html
@@ -23,9 +23,9 @@
 						</div>
 					</div>
 					<div class="share">
-						<a href="#" ng-click="shareFB();"><img src="img/galeria/facebook.png"></a>
-						<a href="#" ng-click="shareTW();"><img src="img/galeria/twitter.png"></a>
-						<a href="#" clipboard text="absUrl"><img src="img/galeria/link.png"></a>
+						<a href="#" ng-click="shareFB(record.id);"><img src="img/galeria/facebook.png"></a>
+						<a href="#" ng-click="shareTW(record.id);"><img src="img/galeria/twitter.png"></a>
+						<a href="#" clipboard text="getPath(record.id)"><img src="img/galeria/link.png"></a>
 					</div>
 				</div>
 			</div>
@@ -40,3 +40,5 @@
 	
 </div>
 <div class="footer"></div>
+
+<ng-include src="'app/modules/galeria/single.template.html'" class="text-center" id="single-view" ng-show="viewSingle"></ng-include>
