UPDATE: Se cambian los textos de los premios

--- a/frontend/app/modules/root/premios.template.html
+++ b/frontend/app/modules/root/premios.template.html
@@ -5,13 +5,13 @@
 		<div class="col-sm-6">
 			<img src="img/premios/premio1.png">
 			<p>
-				Un (1) super premio compuesto por un Televisor Smart TV, un Frigobar y 12 botellas de Pisco Campanario de 700cc.
+				Un super premio de un SmartTV, un Frigobar y productos Campanario
 			</p>
 		</div>
 		<div class="col-sm-6">
 			<img src="img/premios/premio2.png">
 			<p>
-				Tres (3) Pack del Hincha, compuesto por dos Kit del Hincha + 2 Bebidas Cola de 1.5 litros.
+				Un Pack del Hincha por semana, compuesto de dos Kit Campanario + 2 Bebidas Cola de 1.5
 			</p>
 		</div>
 	</div>
