UPDATE: Corrección del player

--- a/frontend/app/modules/galeria/single.template.html
+++ b/frontend/app/modules/galeria/single.template.html
@@ -17,7 +17,7 @@
 						<img src="img/galeria/movil/pilucho.jpg" ng-show="!inPlay" class="fake">
 						<img src="img/galeria/movil/pilucho.gif" ng-show="inPlay" class="fake">
 					</div>
-					<img src="img/galeria/play.png" class="play" ng-click="playRecord($event, false, dataSingle.record.audio);">
+					<img src="img/galeria/play.png" class="play" ng-click="playRecord($event, null, dataSingle.record.audio);">
 				</div>
 			</div>
 			<div class="share">
