UPDATE: bases legales en blanco

--- a/frontend/app/modules/root/footer.template.html
+++ b/frontend/app/modules/root/footer.template.html
@@ -4,7 +4,7 @@
 			<img src="img/footer/logo.png">
 			<span>Pisco Campanario © 2016 Todos los derechos reservados</span>
 			<div class="bases">
-				<a href="/" target="_blank">Bases legales del concurso</a>
+				<a href="/bases-legales.pdf" target="_blank">Bases legales del concurso</a>
 			</div>
 		</div>
 	</div>
