UPDATE: Bases legales y fechas correctas

--- a/frontend/app/modules/ganadores/ganadores.template.html
+++ b/frontend/app/modules/ganadores/ganadores.template.html
@@ -24,7 +24,7 @@
 
 <div class="packs no-winners">
 	<p>
-		El viernes X de Junio se eligirá el primer ganador de uno de los Pack del Hincha
+		El Miercoles 8 de Junio se eligirá el primer ganador de uno de los Pack del Hincha
 	</p>
 </div>
 
