UPDATE: Corrección de diseño y texto para iOS

--- a/frontend/app/modules/record/desktop.template.html
+++ b/frontend/app/modules/record/desktop.template.html
@@ -9,7 +9,7 @@
 					<div class="pilucho-wrapper">
 						<div class="pilucho-content">
 							<div class="movil-text" ng-show="!onData">
-								Graba tu audio alentando a Chile (15 segundos max.) y participa por increíbles premios.
+								{{movilText}}
 							</div>
 							<div class="boca" ng-show="isDesktop"></div>
 							<img src="img/galeria/movil/pilucho.gif" ng-show="onPlay && !isDesktop" class="movil-gif">
