UPDATE: Se agrega link a perfil de facebook de usuario en admin

--- a/frontend/admin/app/modules/home/home.template.html
+++ b/frontend/admin/app/modules/home/home.template.html
@@ -16,7 +16,7 @@
 					<h4 class="ui image header">
 						<img ng-src="//graph.facebook.com/{{record.fb_id}}/picture?type=square" class="ui mini rounded image">
 						<div class="content">
-							{{record.name}}
+							<a ng-href="//www.facebook.com/{{record.fb_id}}" target="_blank">{{record.name}}</a>
 							<div class="sub header">{{record.email}}</div>
 						</div>
 					</h4>
