UPDATE: Se agrega favicon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,9 @@
 
     <title>El Pilucho con Campanario</title>
 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" />
+
     <!-- Open Graph -->
     <meta property="og:title" content="El Pilucho con Campanario" />
     <meta property="og:description" content="Ingresa ahora, dale un grito de apoyo a Chile y participa por fabulosos premios" />
