UPDATE: Se agregan algunas animaciones al sitio

--- a/frontend/app/modules/galeria/galeria.template.html
+++ b/frontend/app/modules/galeria/galeria.template.html
@@ -41,4 +41,4 @@
 </div>
 <div class="footer"></div>
 
-<ng-include src="'app/modules/galeria/single.template.html'" class="text-center" id="single-view" ng-show="viewSingle"></ng-include>
+<ng-include src="'app/modules/galeria/single.template.html'" class="text-center fade-animate" id="single-view" ng-show="viewSingle"></ng-include>
