--- a/frontend/app/modules/root/main.template.html
+++ b/frontend/app/modules/root/main.template.html
@@ -1,6 +1,6 @@
-<ng-include src="'app/modules/root/agegate.template.html'" class="text-center" id="agegate" backstretch backstretch-images="'/img/agegate/bg.jpg'" ng-show="getAgeGate()"></ng-include>
+<ng-include src="'app/modules/root/agegate.template.html'" class="text-center top-animate" id="agegate" backstretch backstretch-images="'/img/agegate/bg.jpg'" ng-show="getAgeGate()"></ng-include>
 
-<ng-include src="'app/modules/record/desktop.template.html'" ng-controller="recordDektopController" class="text-center" id="record" ng-show="userRecord"></ng-include>
+<ng-include src="'app/modules/record/desktop.template.html'" ng-controller="recordDektopController" class="text-center fade-animate" id="record" ng-show="userRecord"></ng-include>
 
 <ng-include src="'app/modules/home/home.template.html'" ng-controller="homeController" id="home" backstretch backstretch-images="'/img/home/bg.jpg'"></ng-include>
 
