--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,6 +68,10 @@
   <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
   <!-- / Bootstrap for AngularJS -->
 
+  <!-- angular-animate for AngularJS -->
+  <script src="lib/angular-animate/angular-animate.min.js"></script>
+  <!-- / angular-animate for AngularJS -->
+
   <!-- angular-easyfb for AngularJS -->
   <script src="lib/angular-easyfb/build/angular-easyfb.min.js"></script>
   <!-- / angular-easyfb for AngularJS -->
